# kyber-1

./: CMakeLists.txt
myref/: indcpa.c  ntt.c  ntt.h  poly.c  poly.h  polyvec.c  polyvec.h  randombytes.c  randombytes.h  reduce.c  reduce.h  test_kyber.c  test_speed.c
